<?xml version="1.0"?>
<package format="2">
  <name>duckietown</name>
  <version>1.0.0</version>
  <description>The duckietown package for duckietown2. Includes duckietown_utils, helper functions used by various packages.</description>
  <maintainer email="brian.shin@lge.com">Brian Shin</maintainer>

  <license>GPLv2</license>

  <url type="website">https://github.com/duckietown/Software/tree/master/catkin_ws/src/00-infrastructure/duckietown</url>
  <author email="brian.shin@lge.com">Brian Shin</author>

  <exec_depend>rclpy</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
