<?xml version="1.0"?>
<package format="2">
  <name>adafruit_drivers</name>
  <version>1.0.0</version>
  <description>The adafruit_drivers package for Duckietown2. </description>
  <maintainer email="brian.shin@lge.com">Brian Shin</maintainer>

  <license>GPLv3</license>

  <url type="website">https://github.com/duckietown/Software/tree/master/catkin_ws/src/05-teleop/adafruit_drivers</url>

  <exec_depend>rclpy</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
