<?xml version="1.0"?>
<package format="2">
  <name>dagu_car</name>
  <version>1.0.0</version>
  <description>The dagu_car package for Duckietown2. Includes inverse kinematics, forward kinematics, wheels driver.</description>
  <maintainer email="brian.shin@lge.com">Brian Shin</maintainer>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/teleop_twist_joy</url>
  <author email="brian.shin@lge.com">Brian Shin</author>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>duckietown_msgs</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
