<?xml version="1.0"?>
<package format="2">
  <name>joy_mapper</name>
  <version>1.0.0</version>
  <description>The joy_mapper package for duckietown2.</description>
  <maintainer email="brian.shin@lge.com">Brian Shin</maintainer>

  <license>GPLv3</license>

  <url type="website">https://github.com/duckietown/Software/tree/master/catkin_ws/src/05-teleop/joy_mapper</url>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>duckietown_msgs</exec_depend>
  <exec_depend>launch</exec_depend>


  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
