<?xml version="1.0"?>
<package format="2">
  <name>ground_projection</name>
  <version>1.0.0</version>
  <description>The ground projection package for Duckietown2.</description>
  <maintainer email="brian.shin@lge.com">Brian Shin</maintainer>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/teleop_twist_joy</url>
  <author email="brian.shin@lge.com">Brian Shin</author>
  
  <depend>image_geometry</depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>duckietown_msgs</exec_depend>
  <!--<exec_depend>image_geometry</exec_depend>-->

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
