<?xml version="1.0"?>
<package format="2">
  <name>lane_control</name>
  <version>1.0.0</version>
  <description>The lane control package for Duckietown2.</description>
  <maintainer email="brian.shin@lge.com">Brian Shin</maintainer>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/teleop_twist_joy</url>
  <author email="brian.shin@lge.com">Brian Shin</author>

  <depend>rclpy</depend>
  <depend>duckietown_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
    
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
