<?xml version="1.0"?>
<package format="2">
  <name>line_detector</name>
  <version>1.0.0</version>
  <description>The line detector package for Duckietown2.</description>
  <maintainer email="brian.shin@lge.com">Brian Shin</maintainer>

  <license>GPLv3</license>

  <url type="website">https://github.com/duckietown/Software/tree/master/catkin_ws/src/10-lane-control/line_detector</url>
  <author email="brian.shin@lge.com">Brian Shin</author>

  <depend>rclpy</depend>
  <depend>duckietown_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>visualization_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
