<?xml version="1.0"?>
<package format="2">
  <name>duckietown_demos</name>
  <version>1.0.0</version>
  <description>The duckietown_demos package for duckietown. Contains launch files to run various demos.</description>
  <maintainer email="brian.shin@lge.com">Brian Shin</maintainer>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/teleop_twist_joy</url>
  <author email="mack@duckietown.org">Mack</author>

  <exec_depend>launch</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
