<?xml version="1.0"?>
<package format="2">
  <name>duckietown_demos</name>
  <version>1.0.0</version>
  <description>The duckietown_demos package for duckietown. Contains launch files to run various demos.</description>
  <maintainer email="brian.shin@lge.com">Brian Shin</maintainer>

  <license>Apache Version 2.0</license>

  <exec_depend>launch</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
