<?xml version="1.0"?>
<package format="2">
  <name>lane_following</name>
  <version>0.0.0</version>
  <description>The deep learning lane following package</description>

  <license>TODO</license>

  <maintainer email="david.uhm@lge.com">David Uhm</maintainer>
  <author email="david.uhm@lge.com">David Uhm</author>

  <depend>cv_bridge</depend>
  <depend>duckietown_msgs</depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
